--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
 									id="check-female"
 									name="gender"
 									value="Female"
+									checked="checked"
 								/>
 								<label for="check-female">Female</label>
 
@@ -98,6 +99,7 @@
 									/>
 									<label for="check-other">Other</label>
 								</div>
+								<div class="error"></div>
 							</div>
 						</div>
 					</div>
@@ -115,8 +117,8 @@
 								<option value="Hockey">Hockey</option>
 								<option value="Squash">Squash</option>
 							</select>
+							<div class="error"></div>
 						</div>
-						<div class="error"></div>
 					</div>
 					<div class="column">
 						<div class="left">
